sassi/tests/compile_fail/watermark_unit.stderr
error[E0277]: the trait bound `(): MonotonicWatermark` is not satisfied
 --> tests/compile_fail/watermark_unit.rs:8:24
  |
8 |     assert_watermark::<()>();
  |                        ^^ the trait `MonotonicWatermark` is not implemented for `()`
  |
help: the following other types implement trait `MonotonicWatermark`
 --> src/watermark.rs
  |
  | / impl<A, B> MonotonicWatermark for (A, B)
  | | where
  | |     A: MonotonicWatermark,
  | |     B: MonotonicWatermark,
  | |__________________________^ `(A, B)`
...
  | / impl<A, B, C> MonotonicWatermark for (A, B, C)
  | | where
  | |     A: MonotonicWatermark,
  | |     B: MonotonicWatermark,
  | |     C: MonotonicWatermark,
  | |__________________________^ `(A, B, C)`
...
  | / impl<A, B, C, D> MonotonicWatermark for (A, B, C, D)
  | | where
  | |     A: MonotonicWatermark,
  | |     B: MonotonicWatermark,
  | |     C: MonotonicWatermark,
  | |     D: MonotonicWatermark,
  | |__________________________^ `(A, B, C, D)`
note: required by a bound in `assert_watermark`
 --> tests/compile_fail/watermark_unit.rs:5:24
  |
5 | fn assert_watermark<T: MonotonicWatermark>() {}
  |                        ^^^^^^^^^^^^^^^^^^ required by this bound in `assert_watermark`
